k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    name: nginx-deploy
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
  selector:
    matchLabels:
      name: nginx-deploy
  template:
    metadata:
      name: nginx-deploy
      labels:
        name: nginx-deploy
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        volumeMounts:
        - mountPath: /var/www/nginx
          name: logs
        - mountPath: /var/www/nginx/config
          name: config-volume
        resources:
          requests:
            cpu: "0.2"
            memtory: "200Mi"
      volumes:
      - name: logs
        emptyDir: {}
      - name: config-volume
        configMap:
          name: app-config
      # Use secret for non public repo
      imagePullSecrets:
      - name: registry-secret
