k8s/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
    - name: myapp-container
      image: my-app-image
      ports:
        - containerPort: 8081
      volumeMounts:
        - mountPath: /usr/src/app/images
          name: images-volume
        - mountPath: /usr/src/app/logs
          name: log-volume
        - mountPath: /usr/src/app/data
          name: data-volume
  volumes:
    - name: images-volume
      emptyDir:
        sizeLimit: 100Mi
    - name: log-volume
      persistentVolumeClaim:
        claimName: claim-log-1
    - name: data-volume
      persistentVolumeClaim:
        claimName: gcp-data
  tolerations:
    - key: app
      value: myapp
      operator: Equal
      effect: NoSchedule
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
             - key: size
               operator: In
               values: 
                - large
